# vank

./: .gitignore  README.md  githfield.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  INTEROP.md  TIME_VALUE_AND_RELEVANCE.md  VOTE_SUPPLY_CROWDFUND.md
src/knitweb_vank/: __init__.py  apportion.py  feynman.py  vfloat.py
src/knitweb_vbank/: __init__.py  crowdfund.py  proximity.py  recency.py  registry.py  settle.py  validation.py  votebank.py
src/vank/: __init__.py  __main__.py  cli.py  core.py  crypto.py  dao.py  poker.py  poker_server.py  server.py
src/vank/fieldledger/: __init__.py  engine.py  entity.py  filing.py  jurisdiction.py  payroll.py  ruleset.py  secure_store.py
src/vank/fieldledger/rulesets/: EU_VAT_2025.json  NL_2025.json  UK_2025.json  US_2025.json
src/vank/static/: app.js  fieldledger.html  index.html  poker.html  style.css
tests/property/: test_fieldledger_payroll.py  test_fieldledger_ruleset.py  test_fieldledger_secure_store.py  test_vank_apportion.py  test_vank_dao.py  test_vank_dao_edge.py  test_vank_feynman.py  test_vank_mint_node.py  test_vank_poker.py  test_vank_poker_edge.py  test_vank_vfloat.py  test_vbank_crowdfund.py  test_vbank_proximity.py  test_vbank_settle.py  test_vbank_vote_supply.py
