[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knitweb-vank"
version = "0.2.0"
description = "vank — Vault DAO, mint node, graphical Scrum Poker, and pulse-integrated governance for Knitweb"
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Knitweb", email = "develuse@gmail.com" }]
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
vank = "vank.cli:main"
vank-poker = "vank.poker_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vank = ["static/*.html", "static/*.css", "static/*.js", "fieldledger/rulesets/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "property: deterministic property/regression tests",
]
testpaths = ["tests"]
